force-app/main/default/objects/DonorSegmentationSettings__c/DonorSegmentationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the settings for Giving history and donor segmentation feature</description>
    <label>Donor Segmentation Settings</label>
</CustomObject>