force-app/main/default/objects/DonorSegmentationSettings__c/fields/HouseholdNamesToSuppress__c.field-meta.xml
<CustomField>
    <fullName>HouseholdNamesToSuppress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Household Names To Suppress</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Used to suppress anonymous households and the like from segmentation processing.  Enter as a comma delimited list</inlineHelpText>
</CustomField>