force-app/main/default/objects/DonorSegmentationSettings__c/fields/OpportunityRecordTypeNames__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRecordTypeNames__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Record Types</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Segmentation processing will only be run for opportunities with these record types.  Enter as a comma delimited list.</inlineHelpText>
</CustomField>