force-app/main/default/objects/DonorSegmentationSettings__c/fields/SoftCreditRoleNames__c.field-meta.xml
<CustomField>
    <fullName>SoftCreditRoleNames__c</fullName>
    <label>Soft Credit Role Names</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Segmentation processing will only be run for soft credits with these roles.  Enter as a comma delimited list.</inlineHelpText>
</CustomField>