force-app/main/default/objects/DonorSegmentationSettings__c/fields/UseFiscalYear__c.field-meta.xml
<CustomField>
    <fullName>UseFiscalYear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Fiscal Year</label>
    <type>Checkbox</type>
    <inlineHelpText>Used to calculate Annual Giving Histories based on the fiscal year defined in company settings.</inlineHelpText>
</CustomField>